fixed background flicker issue

--- a/src/Components/Layout/Layout.module.css
+++ b/src/Components/Layout/Layout.module.css
@@ -1,9 +1,12 @@
 .background {
   position: absolute;
   background: fixed;
+  top: 0;
+  left: 0;
   /* background-image: url("../../images/mist.jpg"); */
   background-position: top;
   background-size: cover;
+  overflow: hidden;
 
   width: 100%;
   height: 110rem;
